remove sonarcloud warnings